.kube/base/api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
    spec:
      volumes:
        - name: app-config
          configMap:
            name: app-config
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: api
          image: image:latest
          imagePullPolicy: Always
          args: ["api"]
          volumeMounts:
            - name: app-config
              mountPath: /app
              readOnly: true
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - containerPort: 9000
              protocol: TCP
              name: monit-port
          livenessProbe:
            httpGet:
              path: /health
              port: monit-port
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: monit-port
            initialDelaySeconds: 2
            periodSeconds: 10
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: 80Mi
