.kube/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/component: api
    pulse.kts.studio/powered-by: ktstools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
    - port: 9000
      targetPort: monit-port
      protocol: TCP
      name: monit-port
  selector:
    app.kubernetes.io/component: api
