.kube/base/api/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  labels:
    app.kubernetes.io/component: api
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: api-tls
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /api
            backend:
              serviceName: api
              servicePort: http
          - path: /docs
            backend:
              serviceName: api
              servicePort: http
